<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button11"
                style="@style/button_numb_otvet"
                android:text="@string/text_ot"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/button12"
                style="@style/button_numb_otvet"
                android:text="@string/text_ot"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/button14"
                style="@style/button_numb_otvet"
                android:text="@string/text_ot"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/button15"
                style="@style/button_numb_otvet"
                android:text="@string/text_ot"
                android:textAlignment="textStart" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button16"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="159dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="159dp"
            android:background="@drawable/bg_but"
            android:text="@string/text_vb"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button17"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="159dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="159dp"
            android:background="#FFFFFF"
            android:text="@string/text_prop"
            android:textColor="#969696"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button18"
            android:layout_width="67dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_but"
            android:text="50/50"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button19"
            android:layout_width="66dp"
            android:layout_height="47dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_but"
            android:text="Помощь друга"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>